--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="img-magnifier-container">
-  <img id="myimage" (mouseenter)="magnify('myimage', 3)" src="../assets/images/img_girl.jpg" width="100%" height="350" alt="Girl">
-</div>
+<div appMagnify [imageUrl]="'../assets/img.jpg'"></div>
